--- a/MagicVilla_Web/MagicVilla_Web.csproj
+++ b/MagicVilla_Web/MagicVilla_Web.csproj
@@ -11,4 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\MagicVilla_Utility\MagicVilla_Utility.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
 </Project>
