--- a/MagicVilla_Web/appsettings.json
+++ b/MagicVilla_Web/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "VillaAPI":"http://localhost:7001"
+  }
 }
 
