--- a/MagicVilla_Web/MagicVilla_Web.csproj
+++ b/MagicVilla_Web/MagicVilla_Web.csproj
@@ -14,5 +14,6 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
