--- a/MagicVilla_Web/appsettings.json
+++ b/MagicVilla_Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "VillaAPI":"http://localhost:7001"
+    "VillaAPI":"https://localhost:7001"
   }
 }
 
