--- a/Magic_Web/Magic_Web.csproj
+++ b/Magic_Web/Magic_Web.csproj
@@ -8,4 +8,7 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <ProjectReference Include="..\MagicVilla_Utility\MagicVilla_Utility.csproj" />
+  </ItemGroup>
 </Project>
