Session 2: Make API version dynamic in Web Project

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ MagicVilla_Web/obj/rider.project.restore.info
 MagicVilla_VillaAPI/obj/*.*
 MagicVilla_Web/obj/*.*
 *.cache
+Magic_Web/bin/Debug/net7.0/Magic_Web
+Magic_Web/bin/Debug/net7.0/Magic_Web
+Magic_Web/bin/Debug/net7.0/Magic_Web
+Magic_Web/bin/Debug/net7.0/Magic_Web
+Magic_Web/bin/Debug/net7.0/Magic_Web.deps.json
+Magic_Web/obj/Debug/net7.0/apphost
+Magic_Web/obj/Magic_Web.csproj.nuget.dgspec.json
