Session 3: 15 Content type for FormFile

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,15 @@ MagicVilla_Web/obj/rider.project.restore.info
 MagicVilla_VillaAPI/obj/*.*
 MagicVilla_Web/obj/*.*
 *.cache
-Magic_Web/bin/Debug/net7.0/Magic_Web
-Magic_Web/bin/Debug/net7.0/Magic_Web
-Magic_Web/bin/Debug/net7.0/Magic_Web
-Magic_Web/bin/Debug/net7.0/Magic_Web
+Magic_Web/bin/Debug/*.*
 Magic_Web/bin/Debug/net7.0/Magic_Web.deps.json
-Magic_Web/obj/Debug/net7.0/apphost
+Magic_Web/obj/*.*
 Magic_Web/obj/Magic_Web.csproj.nuget.dgspec.json
+Magic_Web/obj/Debug/net7.0/apphost
+Magic_Web/obj/Debug/net7.0/Magic_Web.csproj.FileListAbsolute.txt
+Magic_Web/obj/project.assets.json
+Magic_Web/obj/project.packagespec.json
+Magic_Web/obj/rider.project.model.nuget.info
+Magic_Web/bin/*.*
+*.info
+Magic_Web/obj/rider.project.model.nuget.info
