--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,11 @@ MagicVilla_Utility/obj/MagicVilla_Utility.csproj.nuget.g.targets
 MagicVilla_Utility/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
 MagicVilla_Utility/obj/Debug/net7.0/MagicVilla_Utility.AssemblyInfo.cs
 MagicVilla_Utility/obj/project.packagespec.json
+MagicVilla_Web/obj/Debug/net7.0/MagicVilla_Web.assets.cache
+MagicVilla_Web/obj/Debug/net7.0/MagicVilla_Web.csproj.AssemblyReference.cache
+MagicVilla_Web/obj/MagicVilla_Web.csproj.nuget.g.props
+MagicVilla_Web/obj/project.assets.json
+MagicVilla_Web/obj/project.nuget.cache
+MagicVilla_Web/obj/Debug/net7.0/MagicVilla_Web.assets.cache
+MagicVilla_VillaAPI/.vs/MagicVilla_VillaAPI/xs/project-cache/Magic_Web-Debug.json
+MagicVilla_VillaAPI/.vs/MagicVilla_VillaAPI/xs/project-cache/MagicVilla_Web-Debug.json
