--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ MagicVilla_Web/obj/project.nuget.cache
 MagicVilla_Web/obj/Debug/net7.0/MagicVilla_Web.assets.cache
 MagicVilla_VillaAPI/.vs/MagicVilla_VillaAPI/xs/project-cache/Magic_Web-Debug.json
 MagicVilla_VillaAPI/.vs/MagicVilla_VillaAPI/xs/project-cache/MagicVilla_Web-Debug.json
+MagicVilla_VillaAPI/.vs/MagicVilla_VillaAPI/xs/project-cache/MagicVilla_Web-Debug.json
+MagicVilla_VillaAPI/.vs/MagicVilla_VillaAPI/xs/project-cache/Magic_Web-Debug.json
